bookmarkd: fix caption text overflow

--- a/frontend/src/containers/HomePage/style.scss
+++ b/frontend/src/containers/HomePage/style.scss
@@ -22,6 +22,12 @@
 				padding-top: 2px;
 			}
 		}
+
+		.caption {
+			overflow: hidden;
+			text-overflow: ellipsis;
+			white-space: nowrap;
+		}
 	}
 }
 
